# CinderPeak

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .workflow.swp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  License  README.md  ci-test.md  setup-hooks.sh  test-build.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-test.yml  build.yml  ci.yml
docs/: GraphList.md  GraphMatrix.md  development.md  index.md  installation.md  usage.md
examples/: CMakeLists.txt  COOExample.cpp  ListExample1.cpp  MatrixExample.cpp  PeakExample.cpp  PrimitiveGraph.cpp  example1.cpp
examples/extras/: COOExample.cpp  LogExample.cpp
scripts/: README.md  install-hooks.bat  install-hooks.sh  pre-commit
src/: ArialFontDataEmbed.hpp  CinderExceptions.hpp  CinderPeak.hpp  GraphBase.hpp  GraphList.hpp  GraphMatrix.hpp  PeakLogger.hpp  PeakStore.cpp  PeakStore.hpp  StorageInterface.hpp  Utils.hpp  Visualizer.hpp  source.cpp  source.hpp  test.hpp
src/StorageEngine/: AdjacencyList.hpp  CoordinateList.hpp  ErrorCodes.hpp  GraphContext.hpp  HybridCSR_COO.hpp  Utils.hpp
tests/: AdjacencyShard.cpp  CMakeLists.txt  CoordinateShard.cpp  GraphListTests.cpp  GraphMatrixTests.cpp  HybridShard.cpp  tests.cpp
